Fixing animation bug in the data table (b/181351991)
Looks like it was because of a weird feedback loop where the header widths are controlled by the width of table cells, which are indirectly controlled by the width of the header elements, etc. So now, we render one pass with just the table cells to reset the layout before setting the column header widths.

Also fixes a small bug where horizontally-duplicated were overflowing (https://screenshot.googleplex.com/4hYUxva9CVvBb5t vs https://screenshot.googleplex.com/4QJpVQkviU47KxQ)

PiperOrigin-RevId: 361578156

--- a/lit_nlp/client/core/widget_group.css
+++ b/lit_nlp/client/core/widget_group.css
@@ -76,6 +76,7 @@
 .component-row {
   display: flex;
   flex-direction: row;
+  overflow-x: auto;
 }
 
 .component-column {
